<resources>
    <string name="app_name">Movie Catalog</string>

    <string name="title_tvshow">TV Show</string>
    <string name="title_movie">Movie</string>
    <string name="title_favorite">Favorite</string>

    <string name="description_text">This is Overview</string>
    <string name="txt_overview">Overview</string>
    <string name="date_release">00-00-0000</string>
    <string name="rate">0.0</string>
    <string name="overview_text">Overview</string>

    <string name="txt_change_lenguage">Change Language</string>

    <string name="notification_add">Add To Favorite</string>
    <string name="notification_del">Delete From Favorite</string>
    <string name="notification_data_exist">is exists</string>

    <string name="movie_detail_title">Movie Detail</string>
    <string name="tv_detail_title">Tv Show Detail</string>

    <string name="dialog_delete_message">Apakah anda ingin menghapus data ini dari favorite</string>
    <string name="dialog_delete_title">HAPUS</string>
    <string name="dialog_add_title">TAMBAH</string>
    <string name="dialog_add_message">Apakah anda ingin menambahkan data ini ke favorite</string>

    <string name="item_title_movie_search">Search for Movie</string>
    <string name="item_title_tvshow_search">Search for TV Show</string>
    <string name="search">Search</string>

    <string name="appwidget_text">WIDGET</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_textt">Favorite Film</string>
    <string name="empty_text">NO DATA</string>

    <string name="text_settings">Settings</string>

    <string name="key_daily_reminder">Reminder Daily</string>
    <string name="daily_reminder_title">Daily Reminder Notification</string>
    <string name="daily_reminder_summary">This notification will appear at 7 am</string>
    <string name="key_now_release_reminder">Reminder Now Released</string>
    <string name="now_release_reminder_title">Now Released Reminder Notification</string>
    <string name="now_release_reminder_summary">This notification will appear at 8 am</string>

    <string name="key_language">Language</string>
    <string name="language_title">Language</string>
    <string name="language_summary">Change Language</string>

    <string name="notification_text">Notification</string>
    <string name="notification_alarm_daily_reminder">Good Morning! Want to look some movie today?</string>

    <string name="activated">Is Activated</string>
    <string name="not_activated">Not Activated</string>

    <string name="label_description">Has Been Released Today</string>

    <string name="label_switch_on">Reminder Active</string>
    <string name="label_switch_off">Reminder Not Active</string>
</resources>
