<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/language_title">
        <Preference
            android:key="@string/key_language"
            android:title="@string/language_title"
            android:summary="@string/language_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_text">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:title="@string/daily_reminder_title"
            android:summary="@string/daily_reminder_summary"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_now_release_reminder"
            android:title="@string/now_release_reminder_title"
            android:summary="@string/now_release_reminder_summary"/>

    </PreferenceCategory>

</PreferenceScreen>