<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_movie"
        app:showAsAction="never"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/item_title_movie_search"/>

    <item
        android:id="@+id/action_search_tvshow"
        app:showAsAction="never"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.widget.SearchView"
        android:title="@string/item_title_tvshow_search"/>

    <item
        android:id="@+id/action_setings"
        app:showAsAction="ifRoom"
        android:title="@string/text_settings"
        android:icon="@drawable/ic_settings_black_24dp"/>

</menu>